istio/egress-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nexus-egress
spec:
  hosts:
  - "*"
  gateways:
  - nexus-egress-gateway
  http:
  - match:
    - uri:
        prefix: /
      port: 80
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /
      port: 443
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        port:
          number: 443
