istio/ingress-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nexus-ingress
spec:
  hosts:
  - "*"
  gateways:
  - nexus-ingress-gateway
  http:
  - match:
    - uri:
        prefix: /discover
    route:
    - destination:
        host: galileo
        port:
          number: 8080
