istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: galileo
spec:
  hosts:
  - "*"
  gateways:
  - nexus-gateway
  http:
  - match:
    - uri:
        prefix: /discover
    route:
    - destination:
        host: galileo
        port:
          number: 8080
